--- a/frontend/src/i18n/locales/en/translation.json
+++ b/frontend/src/i18n/locales/en/translation.json
@@ -73,4 +73,9 @@
     "noCondition": "Please set your health condition first",
     "analysisFailed": "Failed to analyze food"
   }
-}
+,
+  "safety": {
+    "safe": "Safe",
+    "moderate": "Moderate",
+    "unsafe": "Unsafe"
+  }
